Remove code unrelated to the chatbot

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from google.colab import userdata\n",
-    "import os\n",
-    "#os.environ['OPENAI_API_KEY'] = userdata.get('openAI')"
+    "import os"
    ]
   },
   {
@@ -295,79 +293,6 @@
     "    },\n",
     ")[\"answer\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "dirname = Path(\"test\")\n",
-    "dirname.mkdir(parents=True, exist_ok=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make Git ignore the global configurtion files\n",
-    "os.environ['GIT_CONFIG_SYSTEM'] = \"/dev/null\"\n",
-    "os.environ['GIT_CONFIG_GLOBAL'] = \"/dev/null\"\n",
-    "\n",
-    "import subprocess\n",
-    "# TODO: tell Git a name and email\n",
-    "subprocess.run((\"git\", \"init\", \"--initial-branch=main\"), cwd=dirname, check=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
